Tue  Nov  4 2003	H. Wade Minter (minter@lunenburg.org)
     * Override the default behavior of the extended select mode for
       Tk::Listbox, to fix a problem where drag-and-drop selected too
       much stuff.

Mon  Oct 20 2003	H. Wade Minter (minter@lunenburg.org)
     * Switched the File::Spec stuff from OO style to functional style,
       since nothing else in this software is OO.

Fri  Oct 10 2003	H. Wade Minter (minter@lunenburg.org)
     * Finally fixed a spurious warning when playing files.

Mon  Sep  1 2003	H. Wade Minter (minter@lunenburg.org)
     * Added the Windows Icon and logo files to CVS.
     * Tagged Release Version 1.9

Mon  Aug  4 2003	H. Wade Minter (minter@lunenburg.org)
     * Fix the right-click popup menu so that it can handle multiple
       songs.

Fri  Aug  1 2003	H. Wade Minter (minter@lunenburg.org)
     * Switch from using $$ variables to a %config hash to store
       configuration values.

Mon  Jul 28 2003        H. Wade Minter (minter@lunenburg.org)
     * The Holding Tank will now retain its entries when it's closed and
       reopened.
     * The Holding Tank now has its own accelerator hotkey, Ctrl-T

Fri  Jul 25 2003	H. Wade Minter (minter@lunenburg.org)
     * MUCH cleaner code for the up/down in the tankbox, courtesy
       of "Mastering Perl/Tk"

Thu  Jul 24 2003	H. Wade Minter (minter@lunenburg.org)
     * Added a hotkey lock (Bugzilla ID #17)
     * Nicer icons for the Holding Tank up/down.

Wed  Jul 23 2003	H. Wade Minter (minter@lunenburg.org)
     * Basic Up/Down functionality in the Holding Tank.

Tue  Jul 22 2003	H. Wade Minter (minter@lunenburg.org)
     * Switched to using Tk::ProgressBar::Mac, which looks nicer.
     * Switched to using Tk::Dialog instead of Tk::DialogBox in some
       cases.

Mon  Jul 21 2003        H. Wade Minter (minter@lunenburg.org)
     * Added a check to prevent duplicate categories.
       Suggested by Alan C. in Dallas.