@@ -42,7 +42,7 @@ use subs qw/filemenu_items hotkeysmenu_items categoriesmenu_items songsmenu_item
 # DESCRIPTION: A Perl/TK frontend for an MP3 database.  Written for
 #              ComedyWorx, Raleigh, NC.
 #              http://www.comedyworx.com/
-# CVS ID: $Id: mrvoice.pl,v 1.269 2003/11/04 17:06:13 minter Exp $
+# CVS ID: $Id: mrvoice.pl,v 1.270 2003/11/06 18:56:16 minter Exp $
 # CHANGELOG:
 #   See ChangeLog file
 ##########
@@ -142,7 +142,7 @@ $altv = "PriceIsRightTheme.mp3";
 
 #####
 
-my $version = "1.9.1";			# Program version
+my $version = "1.9.2";			# Program version
 our $status = "Welcome to Mr. Voice version $version";		
 
 # Define 32x32 XPM icon data
@@ -1968,7 +1968,7 @@ sub delete_song
 
 sub show_about
 {
-  $rev = '$Revision: 1.269 $';
+  $rev = '$Revision: 1.270 $';
   $rev =~ s/.*(\d+\.\d+).*/$1/;
   my $string = "Mr. Voice Version $version (Revision: $rev)\n\nBy H. Wade Minter <minter\@lunenburg.org>\n\nURL: http://www.lunenburg.org/mrvoice/\n\n(c)2001, Released under the GNU General Public License";
   my $box = $mw->DialogBox(-title=>"About Mr. Voice", 
